Bug 944215 - Bring back the input logic in bug 950944, with some improvements.  r=bbondy a=lsblakk

Increase the amount of time we process events, and message back once the input
events we want delivered have been.